--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,11 @@
       "src": "/(.*)",
       "dest": "handler.py"
     }
-  ]
+  ],
+  "functions": {
+    "handler.py": {
+      "maxDuration": 60
+    }
+  }
 }
 
