--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
-  "version": 2
+  "version": 2,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/index.py"
+    }
+  ]
 }
 
