--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,21 @@
 {
   "version": 2,
-  "rewrites": [
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/api/index"
+      "src": "handler.py",
+      "use": "@vercel/python"
     }
-  ]
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "handler.py"
+    }
+  ],
+  "functions": {
+    "handler.py": {
+      "maxDuration": 60
+    }
+  }
 }
 
