--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,10 @@
 {
   "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "handler.py",
-      "use": "@vercel/python"
+      "source": "/(.*)",
+      "destination": "/api/index"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/handler.py"
-    }
-  ],
-  "functions": {
-    "handler.py": {
-      "maxDuration": 60
-    }
-  }
+  ]
 }
 
