--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,10 @@ dependencies = [
     "langgraph>=1.0.2",
     "langgraph-cli[inmem]>=0.4.5",
     "mangum>=0.19.0",
+    "pydantic>=2.12.3",
+    "python-dotenv>=1.2.1",
     "uvicorn>=0.38.0",
     "watchdog>=6.0.0",
     "youtube-transcript-api>=1.2.3",
+    "yt-dlp>=2025.10.22",
 ]
